# coarsegraining-energy-fluxes

./: .gitignore  README.md  TODO.md  pyproject.toml
src/coarsegraining_energy_fluxes/: __init__.py  derivatives.py  diagnostics.py  filtering.py  geometry.py  grids.py  kernels.py  pipeline.py
tests/: test_smoke.py
tests/fixtures/: .gitkeep
