[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coarsegraining-energy-fluxes"
version = "0.0.1"
description = "Spatial coarse-graining analysis of cross-scale energy fluxes in geophysical fluid dynamics (NumPy / Dask / xarray)."
readme = "README.md"
requires-python = ">=3.10"
# license: TODO — add a LICENSE file and declare it here (match the Julia sibling once chosen).
authors = [{ name = "Jordan Benjamin" }]
keywords = ["coarse-graining", "energy-flux", "turbulence", "oceanography", "spectral-filtering"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dask = ["dask[array]>=2023.1"]
xarray = ["xarray>=2023.1"]
spectral = ["scipy>=1.10"]            # FFT / spherical-harmonic transforms
viz = ["matplotlib>=3.7"]
all = ["dask[array]>=2023.1", "xarray>=2023.1", "scipy>=1.10", "matplotlib>=3.7"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/jbphyswx/coarsegraining-energy-fluxes"
"Julia sibling" = "https://github.com/jbphyswx/CoarseGrainingEnergyFluxes.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/coarsegraining_energy_fluxes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
